--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head></head>
   <body>
-    Hello World
+    Machine Learning Projects
+    <div>
+      <a href="flappy-ai.standalone/">NeuroEvolution Algorithm Flappy Bird Stand alone</a>
+    </div>
+    <div>
+      <a href="flappy-ai/">NeuroEvolution Learning Algorithm Flappy Bird</a>
+    </div>
   </body>
 </html>
